Socket Utility added

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "homepage": "https://github.com/osamaahmed17/Task1-GSOC#readme",
     "dependencies": {
         "express": "^4.17.3",
-        "nodemon": "^2.0.15"
+        "nodemon": "^2.0.15",
+        "socket.io": "^4.4.1"
     }
 }
