--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     },
     "homepage": "https://github.com/osamaahmed17/Task1-GSOC#readme",
     "dependencies": {
+        "ejs": "^3.1.6",
         "express": "^4.17.3",
+        "jade": "^1.11.0",
+        "jsdom": "^19.0.0",
         "nodemon": "^2.0.15",
-        "socket.io": "^4.4.1"
+        "socket.io": "^4.4.1",
+        "watchify": "^4.0.0"
     }
 }
