--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
         "nodemon": "^2.0.15",
         "socket.io": "^4.4.1",
         "watchify": "^4.0.0"
+    },
+    "engines": {
+        "node": "14.x"
     }
 }
